Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-1875

QTcpServer does not disable the read notification when subclassed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.7.0
    • 4.3.4
    • Network
    • None
    • 4620b0fc7a48c643400a42eb9e9cc0a82ad0be9a

      QTcpServer does not disable the read notification when subclassed and the incomingConnection() function is reimplemented to create a different type of socket, for instance a QSslSocket. The reason for this is that the internal queue is not exposed to the QTcpServer class so it's not possible to add the new socket to the queue, and thus the check for maxConnections in QTcpServerPrivate::readNotification() will never make disable read notification for the socket engine.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mgoetz Markus Goetz (Inactive)
            admin Administrator
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes