Keep support for maximum pending connections in derived QTcpServer

By adding a new function to the class QTcpServer it's now possible to
extend QTcpserver functionality with for instance SSL capabilities and
still keep the support for maximum pending connections.

Task-number: QTBUG-1875
Reviewed-by: Peter Hartmann
Reviewed-by: Markus Goetz
Merge-Request: 568